fix cart overlay displacement on small screens

--- a/src/Components/CartOverlay/CartOverlay.module.css
+++ b/src/Components/CartOverlay/CartOverlay.module.css
@@ -12,7 +12,7 @@
     z-index: 2;
     position: absolute;
     right: 0;
-    transform: translateX(-40%);
+    transform: translateX(-5%);
 
     display: flex;
     flex-direction: column;
@@ -97,5 +97,10 @@
     font-size: 1rem; /* 16px */
     font-weight: var(--font-weight-bold);
     line-height: 160%;
+}
+@media only screen and (min-width: 1080px) {
+    .container {
+        transform: translateX(-40%);
+    }
 }
 
